--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="top-shadow"></div>
 
     <section class="home-slider owl-carousel">
-      <div class="slider-item" style="background-image: url('images/hero_1.jpg');">
+      <div class="slider-item" style="background-image: url('images/gif.gif');">
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-lg-7 text-center col-sm-12 element-animate">
