--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
-
-          
+          <div class="fab-container">
+            <div class="fab fab-icon-holder">
+              <i class="fas fa-question"></i>
+            </div>
+            <ul class="fab-options">
+              <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe></ul>
+          </div>
           </div>
         </div>
       </nav>
