--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
           <div class="fab-container">
             <div class="fab fab-icon-holder">
               <i class="fas fa-question"></i>
+            <img src="images/icon.png">
             </div>
             <ul class="fab-options">
-              <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe></ul>
-          </div>
+            <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="372px" allowfullscreen></iframe>     </div>
           </div>
         </div>
       </nav>
