--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
         <div class="container-fluid">
           <a class="navbar-brand " href="index.html">Industries</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+          <div class="fab-container">
+            <div class="fab fab-icon-holder">
+              <img style="height:100%;width: 100%"; src="images/icon.png">
+              <i style="color:transparent;";class="fas fa-question"></i>
+            </div>
+            <ul class="fab-options">
+            <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="272px" allowfullscreen></iframe>     </div>
+          </div>
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -57,9 +65,8 @@
             </ul>
           <div class="fab-container">
             <div class="fab fab-icon-holder">
-              <i class="fas fa-question"></i>
-            <img src="images/icon.png">
-
+              <img style="height:100%;width: 100%"; src="images/icon.png">
+              <i style="color:transparent;";class="fas fa-question"></i>
             </div>
             <ul class="fab-options">
             <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="372px" allowfullscreen></iframe>     </div>
