--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-lg-7 text-center col-sm-12 element-animate">
-              <h1 style="font-size: 48px";class="mb-2"><span>LML's Guide to AP CSP</span></h1>
+              <h1 style="font-size: 48px;color:white";class="mb-2"><span>LML's Guide to AP CSP</span></h1>
               <div class="btn-play-wrap mx-auto"><p class="mb-4"><a href="https://www.youtube.com/watch?v=dVPUumrPZ48" data-fancybox data-ratio="2" class="btn-play"><span class="ion ion-ios-play"></span></a></p></div>
               <p class="mb-5 w-75">Making Computing Easier; Every Step of the Way</p>
             </div>
