--- a/form.html
+++ b/form.html
@@ -82,6 +82,15 @@
     <!-- END slider -->
     </div>
 
+<h1>Quiz on Important Facts</h1>
+<div class="quiz-container">
+  <div id="quiz"></div>
+</div>
+<button id="previous">Previous Question</button>
+<button id="next">Next Question</button>
+<button id="submit">Submit Quiz</button>
+<div id="results"></div>
+
     <section class="section border-bottom">
       <div class="container">
         <div class="row">
