--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <div class="container-fluid">
           <a style="font-size: 45px; color:white";class="navbar-brand " href="index.html">LML</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+            <span id=navbar class="navbar-toggler-icon"></span>
+          </button>
           <div class="fab-container">
             <div class="fab fab-icon-holder">
               <img style="height:100%;width: 100%"; src="images/icon.png">
@@ -34,8 +36,7 @@
             <ul class="fab-options">
             <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="272px" allowfullscreen></iframe>     </div>
           </div>
-            <span class="navbar-toggler-icon"></span>
-          </button>
+
 
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav pl-md-5 ml-auto">
@@ -296,7 +297,7 @@
         </div>
       </div>
     </section>
-    <footer class="site-footer" role="contentinfo">
+    <footer style="background-color: #1a0600"; class="site-footer" role="contentinfo">
         <div class="row">
           <div class="col-12 text-md-center text-left">
              <p>
