--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Industries Website Template by Colorlib</title>
+    <title>LML's Guide to AP CSP</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -24,44 +24,54 @@
     <header role="banner">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand " href="index.html">Industries</a>
+          <a style="font-size: 45px; color:white";class="navbar-brand " href="index.html">LML</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span id=navbar class="navbar-toggler-icon"></span>
           </button>
+          <div class="fab-container">
+            <div class="fab fab-icon-holder">
+              <img style="height:100%;width: 100%"; src="images/icon.png">
+              <i style="color:transparent;";class="fas fa-question"></i>
+            </div>
+            <ul class="fab-options">
+            <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="272px" allowfullscreen></iframe>     </div>
+          </div>
+
 
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav pl-md-5 ml-auto">
               <li class="nav-item">
-                <a class="nav-link " href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li>
+                <a class="nav-link" href="about.html">Chapters</a>
+
+              </li>
+                <a class="nav-link" href="about.html">Quizzes</a>
+
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown04">
+                  <a class="dropdown-item" href="emulator.html">Python Emulator</a>
+                  <a class="dropdown-item" href="calculator.html">Calculator</a>
+                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle " href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="services.html">Architectural Design</a>
-                  <a class="dropdown-item" href="services.html">Interior</a>
-                  <a class="dropdown-item" href="services.html">Building</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blog.html">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
             </ul>
-
-          
+          <div class="fab-container">
+            <div class="fab fab-icon-holder">
+              <img style="height:100%;width: 100%"; src="images/icon.png">
+              <i style="color:transparent;";class="fas fa-question"></i>
+            </div>
+            <ul class="fab-options">
+            <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="372px" allowfullscreen></iframe>     </div>
           </div>
         </div>
       </nav>
     </header>
-    <!-- END header -->
 
     <div class="top-shadow"></div>
 
@@ -128,12 +138,12 @@
             <p class="mb-5 lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
           </div>
         </div>
-        <div class="row">
+        <div style="margin-right: -300px; margin-left: -5px;" class="row">
           <div class="col-lg-3">
             <div class="media d-block media-custom text-center">
               <a href="#"><img src="images/person_1.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">James Doe</h3>
+                <h3 class="mt-0 text-black">Gerald <a style="color:orange"><span style="color:red">L</span>iu</a></h3>
               </div>
             </div>
           </div>
@@ -141,7 +151,7 @@
             <div class="media d-block media-custom text-center">
               <a href="#"><img src="images/person_2.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">Mike Roger</h3>
+                <h3 class="mt-0 text-black">Abhijith Varma <a style="color:orange"><span style="color:red">M</span>udunuri</a></h3>
               </div>
             </div>
           </div>
@@ -149,15 +159,7 @@
             <div class="media d-block media-custom text-center">
               <a href="#"><img src="images/person_4.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
-                <h3 class="mt-0 text-black">Jim Smith</h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="media d-block media-custom text-center">
-              <a href="#"><img src="images/person_3.jpg" alt="Image Placeholder" class="img-fluid"></a>
-              <div class="media-body">
-                <h3 class="mt-0 text-black">Rich Gold</h3>
+                <h3 class="mt-0 text-black">Ray <a style="color:orange"><span style="color:red">L</span>in</a></h3>
               </div>
             </div>
           </div>
