--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li>
-                <a class="nav-link" href="about.html">Chapters</a>
+                <a class="nav-link" href="chapter1.html">Chapters</a>
 
               </li>
                 <a class="nav-link" href="about.html">Quizzes</a>
