--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
         </div>
       </div>
     </section>
+    <!-- Footer Start -->
     <footer style="background-color: #1a0600"; class="site-footer" role="contentinfo">
         <div class="row">
           <div class="col-12 text-md-center text-left">
