--- a/form.html
+++ b/form.html
@@ -43,10 +43,10 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li>
-                <a class="nav-link" href="about.html">Chapters</a>
+                <a class="nav-link" href="chapter1.html">Chapters</a>
 
               </li>
-                <a class="nav-link" href="about.html">Quizzes</a>
+                <a class="nav-link active" href="quizzes.html">Quizzes</a>
 
               </li>
               <li class="nav-item dropdown">
@@ -57,7 +57,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
             </ul>
           <div class="fab-container">
