--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-8">
-            <h2 class="text-white mb-0">About the Test</h2>
-            <p class="text-white lead">Advanced Placement Computer Science Principles is an AP Computer Science course and examination offered by the College Board to high school students as an opportunity to earn college credit for a college-level computing course.</p>
+            <h2 class="text-white mb-0">Why LML</h2>
+            <p class="text-white lead">Here at LML, we make it easy to understand the various concepts and topics that CSP covers. With our handcrafted notes, quizzes, and knowledge assesments; we make the CSP curriculum simple to comprehend!</p>
           </div>
           <div class="col-lg-4 text-lg-right">
-            <a href="https://apcentral.collegeboard.org/courses/ap-computer-science-principles/course" class="btn btn-outline-white px-4 py-3">Learn More</a>
+            <a href="https://apcentral.collegeboard.org/courses/ap-computer-science-principles/course" class="btn btn-outline-white px-4 py-3">Table of Contents</a>
           </div>
         </div>
       </div>
