--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
           </div>
           <div class="col-lg-3">
             <div class="media d-block media-custom text-center">
-              <a><img src="images/avm.jpg" alt="Image Placeholder" class="img-fluid"></a>
+              <a><img src="images/border.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
                 <h3 class="mt-0 text-black">Abhijith Varma <a style="color:orange"><span style="color:red">M</span>udunuri</a></h3>
               </div>
@@ -154,7 +154,7 @@
           </div>
           <div class="col-lg-3">
             <div class="media d-block media-custom text-center">
-              <a><img src="images/j3.jpg" alt="Image Placeholder" class="img-fluid"></a>
+              <a><img src="images/ray.jpg" alt="Image Placeholder" class="img-fluid"></a>
               <div class="media-body">
                 <h3 class="mt-0 text-black">Ray <a style="color:orange"><span style="color:red">L</span>in</a></h3>
               </div>
