--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <p class="text-white lead">Here at LML, we make it easy to understand the various concepts and topics that CSP covers. With our handcrafted notes, quizzes, and knowledge assesments; we make the CSP curriculum simple to comprehend!</p>
           </div>
           <div class="col-lg-4 text-lg-right">
-            <a href="https://apcentral.collegeboard.org/courses/ap-computer-science-principles/course" class="btn btn-outline-white px-4 py-3">Table of Contents</a>
+            <a href="chapter1.html" class="btn btn-outline-white px-4 py-3">Table of Contents</a>
           </div>
         </div>
       </div>
