--- a/unit2.html
+++ b/unit2.html
@@ -77,13 +77,13 @@
     <div class="top-shadow"></div>
 
     <div class="inner-page">
-    <div class="slider-item" style="background-image: url('images/algss.jpg');">
+    <div class="slider-item" style="background-image: url('images/image.png');">
         
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 element-animate pt-5">
-              <h1 class="pt-5"><span>Unit 1</span></h1>
-              <p class="mb-5 w-75 pl-0">History & Algorithms</p>
+              <h1 class="pt-5"><span>Unit 2</span></h1>
+              <p class="mb-5 w-75 pl-0">Hardware</p>
             </div>
           </div>
         </div>
