--- a/ch6.html
+++ b/ch6.html
@@ -112,7 +112,7 @@
             <p class="tab">prevents accidental or interntial damage to hardware, programs, and data</p>
             
             <br>
-            <p>System Software - a collection of cpmputer programs taht manage the resources of a computer and the facilitates access to those resources</p>
+            <p>System Software - a collection of computer programs that manage the resources of a computer and the facilitates access to those resources</p>
             <p>Application software - software/programs that allow users to address specialized tasks such as writting a document, browing the web, etc</p>
             <p class="tab">software consists of sequence of instructions (programs) that solve a problem</p>
 
@@ -146,8 +146,6 @@
             <p style="margin-left: 80px";>text editors, online help routines, images and sound applications, and control panels are examples</p>
             <p style="margin-left: 120px";>utilities are sometimes known as "program liberaries"</p>
             <br>
-
-            <p style="font-size:12px ;color:#E0E0E0">Schneider, G. Michael, and Judith L. Gersting. Invitation to Computer Science. Cengage Learning, 2019</p>
           </div>
         </div>
       </div>
