--- a/calculator.html
+++ b/calculator.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +11,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="css/calcstyle.css">
+
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
 
@@ -27,6 +28,13 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span id=navbar class="navbar-toggler-icon"></span>
           </button>
+          <div class="fab-container">
+            <div class="fab fab-icon-holder">
+              <img style="height:100%;width: 100%"; src="images/icon.png">
+              <i style="color:transparent;";class="fas fa-question"></i>
+            </div>
+            <ul class="fab-options">
+            <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="272px" allowfullscreen></iframe>     </div>
           </div>
 
 
@@ -50,9 +58,18 @@
                 </div>
               </li>
               <li class="nav-item">
+                <a class="nav-link active" href="games.html">Games</a>
+              <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
               </li>
             </ul>
+          <div class="fab-container">
+            <div class="fab fab-icon-holder">
+              <img style="height:100%;width: 100%"; src="images/icon.png">
+              <i style="color:transparent;";class="fas fa-question"></i>
+            </div>
+            <ul class="fab-options">
+            <iframe src="https://avms-calculator.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="372px" allowfullscreen></iframe>     </div>
           </div>
         </div>
       </nav>
