--- a/unit3.html
+++ b/unit3.html
@@ -58,6 +58,8 @@
                 </div>
               </li>
               <li class="nav-item">
+                <a class="nav-link active" href="games.html">Games</a>
+              <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
               </li>
             </ul>
@@ -73,7 +75,6 @@
       </nav>
     </header>
     <!-- END header -->
-
     <div class="top-shadow"></div>
 
     <div class="inner-page">
