--- a/1.1.html
+++ b/1.1.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="chapter1.html">Chapters</a>
 
               </li>
-                <a class="nav-link" href="about.html">Quizzes</a>
+                <a class="nav-link" href="quizzes.html">Quizzes</a>
 
               </li>
               <li class="nav-item dropdown">
@@ -57,6 +57,8 @@
                   <a class="dropdown-item" href="calculator.html">Calculator</a>
                 </div>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="games.html">Games</a>
               <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
               </li>
