--- a/about.html
+++ b/about.html
@@ -58,6 +58,8 @@
                 </div>
               </li>
               <li class="nav-item">
+                <a class="nav-link active" href="games.html">Games</a>
+              <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
               </li>
             </ul>
@@ -72,6 +74,7 @@
         </div>
       </nav>
     </header>
+    <!-- END header -->
 
     <div class="top-shadow"></div>
 
