--- a/ch1.html
+++ b/ch1.html
@@ -58,7 +58,9 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" href="games.html">Games</a>
+              <li class="nav-item">
+                <a class="nav-link active" href="about.html">About</a>
               </li>
             </ul>
           <div class="fab-container">
