--- a/form.html
+++ b/form.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -46,7 +47,7 @@
                 <a class="nav-link" href="chapter1.html">Chapters</a>
 
               </li>
-                <a class="nav-link active" href="quizzes.html">Quizzes</a>
+                <a class="nav-link" href="quizzes.html">Quizzes</a>
 
               </li>
               <li class="nav-item dropdown">
@@ -57,7 +58,9 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" href="games.html">Games</a>
+              <li class="nav-item">
+                <a class="nav-link active" href="about.html">About</a>
               </li>
             </ul>
           <div class="fab-container">
