--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 </div>
               </li>
               <li class="nav-item">
+                <a class="nav-link active" href="games.html">Games</a>
+              <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
               </li>
             </ul>
