--- a/games.html
+++ b/games.html
@@ -79,7 +79,7 @@
     <div class="top-shadow"></div>
 
     <div class="inner-page">
-    <div class="slider-item" style="background-image: url('images/game.png');">
+    <div class="slider-item" style="background-image: url('images/games.jpg');">
         
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
