--- a/calculator.html
+++ b/calculator.html
@@ -17,6 +17,7 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/calcstyle.css">
 
   </head>
   <body>
