--- a/unit1.html
+++ b/unit1.html
@@ -84,8 +84,8 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 element-animate pt-5">
-              <h1 class="pt-5"><span>Games</span></h1>
-              <p class="mb-5 w-75 pl-0">Take a break from binary, and binge some of these handcrafted HTML, CSS, and JS games!</p>
+              <h1 class="pt-5"><span>Unit 1</span></h1>
+              <p class="mb-5 w-75 pl-0">Learn from our custom made notes!</p>
             </div>
           </div>
         </div>
