--- a/car.html
+++ b/car.html
@@ -79,7 +79,7 @@
     <div class="top-shadow"></div>
 
     <div class="inner-page">
-    <div class="slider-item" style="background-image: url('images/snake.jpg');">
+    <div class="slider-item" style="background-image: url('images/race.jpg');">
         
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
@@ -94,11 +94,7 @@
     </div>
     
     <section class="section border-t pb-0">
-      <div class="container">
-        <div class="row justify-content-center mb-5 element-animate">
-          <iframe src="https://avm-snake.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="770pxpx" width="1505pxpx" allowfullscreen></iframe>
-        </div>
-      </div>
+      <iframe src="https://car-racer.netlify.app/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="740px" width="1500px" allowfullscreen></iframe>        </div>
     </div>
     <!-- END .block-4 -->
     </section>
