--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
-
+     
+        <link rel="icon"
+          type="img/png"
+          href="images/lml.png"
+     >
   </head>
   <body>
     
