--- a/classes2.html
+++ b/classes2.html
@@ -1878,10 +1878,13 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+class MyClass:\n\
+    variable = 'blah'\n\
+\n\
+    def function(self):\n\
+        print('This is a message inside the class.')\n\
+\n\
+myobjectx = MyClass()\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
