--- a/list.html
+++ b/list.html
@@ -1878,10 +1878,17 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+mylist = []\n\
+mylist.append(1)\n\
+mylist.append(2)\n\
+mylist.append(3)\n\
+print(mylist[0]) # prints 1\n\
+print(mylist[1]) # prints 2\n\
+print(mylist[2]) # prints 3\n\
+\n\
+# prints out 1,2,3\n\
+for x in mylist:\n\
+    print(x)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
