--- a/list2.html
+++ b/list2.html
@@ -1878,10 +1878,10 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+#This will generate an error\n\
+\n\
+mylist = [1,2,3]\n\
+print(mylist[10])\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
