--- a/negativenumbers.html
+++ b/negativenumbers.html
@@ -1878,10 +1878,8 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+astring = 'Hello world!'\n\
+print(astring[3:7:2])\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
