--- a/break.html
+++ b/break.html
@@ -1878,10 +1878,21 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+# Prints out 0,1,2,3,4\n\
+\n\
+count = 0\n\
+while True:\n\
+    print(count)\n\
+    count += 1\n\
+    if count >= 5:\n\
+        break\n\
+\n\
+# Prints out only odd numbers - 1,3,5,7,9\n\
+for x in range(10):\n\
+    # Check if x is even\n\
+    if x % 2 == 0:\n\
+        continue\n\
+    print(x)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
