--- a/dictionaries.html
+++ b/dictionaries.html
@@ -1878,10 +1878,11 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+phonebook = {}\n\
+phonebook['John'] = 938477566\n\
+phonebook['Jack'] = 938377264\n\
+phonebook['Jill'] = 947662781\n\
+print(phonebook)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
