--- a/dictionaries2.html
+++ b/dictionaries2.html
@@ -1878,10 +1878,12 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+phonebook = {\n\
+    'John' : 938477566,\n\
+    'Jack' : 938377264,\n\
+    'Jill' : 947662781\n\
+}\n\
+print(phonebook)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
