--- a/float.html
+++ b/float.html
@@ -1878,10 +1878,10 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+myfloat = 7.0\n\
+print(myfloat)\n\
+myfloat = float(7)\n\
+print(myfloat)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
