--- a/for.html
+++ b/for.html
@@ -1878,10 +1878,9 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+primes = [2, 3, 5, 7]\n\
+for prime in primes:\n\
+    print(prime)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
