--- a/forit.html
+++ b/forit.html
@@ -1878,10 +1878,17 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+# Prints out the numbers 0,1,2,3,4\n\
+for x in range(5):\n\
+    print(x)\n\
+\n\
+# Prints out 3,4,5\n\
+for x in range(3, 6):\n\
+    print(x)\n\
+\n\
+# Prints out 3,5,7\n\
+for x in range(3, 8, 2):\n\
+    print(x)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
