--- a/iterating.html
+++ b/iterating.html
@@ -1878,10 +1878,9 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+phonebook = {'John' : 938477566,'JacK' : 938377264,'Jill' : 947662781}\n\
+for name, number in phonebook.items():\n\
+    print('Phone number of %s is %d' % (name, number))\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
