--- a/lists3.html
+++ b/lists3.html
@@ -1878,10 +1878,10 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+even_numbers = [2,4,6,8]\n\
+odd_numbers = [1,3,5,7]\n\
+all_numbers = odd_numbers + even_numbers\n\
+print(all_numbers)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
