--- a/mixed.html
+++ b/mixed.html
@@ -1878,10 +1878,12 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+# This will not work!\n\
+one = 1\n\
+two = 2\n\
+hello = 'hello'\n\
+\n\
+print(one + two + hello)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
