--- a/multiplication.html
+++ b/multiplication.html
@@ -1878,10 +1878,10 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+squared = 7 ** 2\n\
+cubed = 2 ** 3\n\
+print(squared)\n\
+print(cubed)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
