--- a/stringform.html
+++ b/stringform.html
@@ -1878,10 +1878,9 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+# This prints out "Hello, John!"\n\
+name = "John"\n\
+print("Hello, %s!" % name)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
