--- a/tuple.html
+++ b/tuple.html
@@ -1878,10 +1878,10 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+# This prints out "John is 23 years old."\n\
+name = "John"\n\
+age = 23\n\
+print("%s is %d years old." % (name, age))\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
