--- a/while.html
+++ b/while.html
@@ -1878,10 +1878,12 @@
 \n\
 # Python IDE created by AVM\n\
 \n\
-x = 1\n\
-if x == 1:\n\
-    # indented four spaces\n\
-    print('x is 1.')\n\
+# Prints out 0,1,2,3,4\n\
+\n\
+count = 0\n\
+while count < 5:\n\
+    print(count)\n\
+    count += 1  # This is the same as count = count + 1\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
