--- a/blah.html
+++ b/blah.html
@@ -1884,18 +1884,13 @@ class MyClass:\n\
         print('This is a message inside the class.')\n\
 \n\
 myobjectx = MyClass()\n\
-myobjecty = MyClass()\n\
 \n\
-myobjecty.variable = 'yackity'\n\
-\n\
-# Then print out both values\n\
-print(myobjectx.variable)\n\
-print(myobjecty.variable)\n\
+myobjectx.variable\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
         var share_url = base_url; var exe_cnt = 0; var addthis_share = { url: share_url, }
-        var csrf_token_age = 23'ci_csrf_token'
+        var csrf_token_name = 'ci_csrf_token'
         var csrf_token = ''
         var isMobile = window.orientation > -1; toastr.options = { "closeButton": true, "debug": false, "newestOnTop": true, "positionClass": "toast-top-right", "preventDuplicates": true, "preventOpenDuplicates": true, "maxOpened": 1, "onclick": null, "showDuration": "100", "hideDuration": "1000", "timeOut": "3000", "extendedTimeOut": "1000", "showEasing": "swing", "hideEasing": "linear", }; var instance = Split(['#mi', '#d'], { direction: 'vertical', sizes: [65, 60], gutterSize: 0, cursor: 'row-resize', minSize: [0, 180], onDrag: function () { editor.resize(); }, }); function term_expand() {
             var element = document.getElementById('term-expand').innerHTML; if (element === '<i class="fas fa-expand-alt fa-lg"></i>') { instance.setSizes([0, 94]); editor.resize(); document.getElementById('term-expand').innerHTML = '<i class="fas fa-compress-alt fa-lg"></i>' } else { instance.setSizes([65, 60]); editor.resize(); document.getElementById('term-expand').innerHTML = '<i class="fas fa-expand-alt fa-lg"></i>' }
