--- a/lists3.html
+++ b/lists3.html
@@ -1256,64 +1256,6 @@
             overflow: auto;
             height: 30px !important;
             border-radius: 3px;
-            flex: .9
-        }
-
-        .ace-tm .ace_gutter {
-            background: #f4f4f4;
-            background: var(--tab-background-color)
-        }
-
-        .ace_gutter-cell {
-            color: gray;
-            margin-top: 1px;
-            font-size: 96%
-        }
-
-        #shareModal,
-        #shareModalAfter {
-            text-align: -webkit-center;
-            text-align: -moz-center
-        }
-
-        #aboutSiteModal {
-            -webkit-font-smoothing: antialiased
-        }
-
-        .abountModalBody p {
-            line-height: 1.5em;
-            font-size: 115%;
-            font-weight: 400;
-            vertical-align: middle;
-            -webkit-font-smoothing: antialiased
-        }
-
-        .modal-footer>p {
-            float: left;
-            margin-left: -1em
-        }
-
-        @media all and (max-width:1100px) {
-            #container {
-                width: 100%
-            }
-
-            .nav_logo {
-                margin-left: 2.8rem
-            }
-
-            #control-btn {
-                margin-right: 3px
-            }
-        }
-
-        @media all and (max-width:571px) {
-            .nav_logo {
-                margin-left: 1.6rem;
-                font-size: 125%
-            }
-
-            .container {
                 padding-right: 5px;
                 padding-left: 5px
             }
@@ -1872,7 +1814,7 @@
                         data-dismiss=modal>Close</button>
                 </div>
             </div>
-        </div>
+        </div>age = 23
     </div>
     <script>ace.require("ace/ext/language_tools"); var editor = ace.edit("editor"); ace.require('ace/ext/settings_menu').init(editor); var editor_cnt = 1, editor_index = 1, active_editor = 1, editor_session = []; var request, init_ts, open_file_name; var lang = 'python3'; default_content = "\
 \n\
