--- a/py.html
+++ b/py.html
@@ -285,20 +285,20 @@
             <br>
             <h4>Accessing Object Variables</h4>
             <p>To access the variable inside of the newly created object "myobjectx" you would do the following:</p>
-            <iframe src="https://lml-apcsp.netlify.app/object-variables.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
+            <iframe src="https://lml-apcsp.netlify.app/object%20variables.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
             <br>
             <br>
             <p>So for instance the below would output the string "blah":</p>
-            <iframe src="https://lml-apcsp.netlify.app/object-variables2-html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
+            <iframe src="https://lml-apcsp.netlify.app/object%20variables2-html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
             <br>
             <br>
             <p>You can create multiple different objects that are of the same class(have the same variables and functions defined). However, each object contains independent copies of the variables defined in the class. For instance, if we were to define another object with the "MyClass" class and then change the string in the variable above:</p>
-            <iframe src="https://lml-apcsp.netlify.app/object-variables3.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
+            <iframe src="https://lml-apcsp.netlify.app/object%20variables3.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
             <br>
             <br>
             <h4>Accessing Object Functions</h4>
             <p>To access a function inside of an object you use notation similar to accessing a variable:</p>
-            <iframe src="https://lml-apcsp.netlify.app/object-functions.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
+            <iframe src="https://lml-apcsp.netlify.app/object%20functions.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
             <br>
             <br>
             <p>The above would print out the message, "This is a message inside the class."</p>
@@ -316,7 +316,6 @@
             <iframe src="https://lml-apcsp.netlify.app/dictionaries.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
             <br>
             <br>
-            <p>
             Alternatively, a dictionary can be initialized with the same values in the following notation:
             </p>
             <iframe src="https://lml-apcsp.netlify.app/dictionaries2.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
