--- a/py.html
+++ b/py.html
@@ -289,7 +289,7 @@
             <br>
             <br>
             <p>So for instance the below would output the string "blah":</p>
-            <iframe src="https://lml-apcsp.netlify.app/object%20variables2-html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
+            <iframe src="https://lml-apcsp.netlify.app/object%20variables2.html" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="500px" width="800px" allowfullscreen></iframe>
             <br>
             <br>
             <p>You can create multiple different objects that are of the same class(have the same variables and functions defined). However, each object contains independent copies of the variables defined in the class. For instance, if we were to define another object with the "MyClass" class and then change the string in the variable above:</p>
