--- a/py.html
+++ b/py.html
@@ -77,12 +77,12 @@
     <div class="top-shadow"></div>
 
     <div class="inner-page">
-    <div class="slider-item" style="background-image: url('images/algees.jpg');">
+    <div class="slider-item" style="background-image: url('images/python.jpg');">
         
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 element-animate pt-5">
-              <h1 class="pt-5"><span>Chapter 3</span></h1>
+              <h1 class="pt-5"><span>Chapter 9</span></h1>
             </div>
           </div>
         </div>
@@ -97,13 +97,14 @@
 
         <div class="row justify-content-center mb-5 ">
           <div class="col-md-8 text-center">
-            <h2 class=" heading mb-4">The Efficiency of Algorithms</h2>
-            <p class="mb-5 lead">By the end of this chapter, you will learn about the types of algorithm attributes and various types of algorithms designed for specific purposes. You will be introduced to terms such as the order of magnitude and you will learn how this measurement is used to classify algorithms.</p>
+            <h2 class=" heading mb-4">High Level Programming Languages</h2>
+            <p class="mb-5 lead">This chapter deals with higher level programming such as python, java, c++, etc. For the sake of learning, we will use python in this lesson as it is easy to learn, widely used, and once you learn the fundamentals of programming; can be applied in any other context.</p>
           </div>
         </div>
         
         <div class="row justify-content-center">
           <div class="col-md-8">
+            <h1>Python Programming</h1>
             <h2>Printing</h2>
             <p>
               Python is a very simple language, and has a very straightforward syntax. It encourages programmers to program without boilerplate (prepared) code. The simplest directive in Python is the "print" directive - it simply prints out a line (and also includes a newline, unlike in C).
