--- a/py.html
+++ b/py.html
@@ -25,7 +25,7 @@
   <div class="sidebar close">
     <div class="logo-details">
       <i class='bx bx-menu'></i>
-      <span class="logo_name">CodingLab</span>
+      <span class="logo_name">Python Lesson</span>
     </div>
         <ul class="nav-links">
       <li>
