--- a/stringform.html
+++ b/stringform.html
@@ -1880,7 +1880,7 @@
 \n\
 # This prints out 'Hello, John!'\n\
 name = 'John'\n\
-print('Hello, %s!'' % name)\n\
+print(Hello, %s!' % name)\n\
 \n\
 "; var prev_result = 'in'; var site_url = "https://www.online-python.com/"
         var base_url = "https://www.online-python.com/"
